fields and images loading correctly, able to sort by one method, working on filter/search

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -13,5 +13,9 @@ th {
 
 tbody {
   color: darkgoldenrod;
-  padding-inline: 5px;
+  padding-inline: 3px;
+}
+
+.menu_links {
+  cursor: pointer;
 }
