--- a/src/components/style.css
+++ b/src/components/style.css
@@ -5,17 +5,33 @@
   margin-bottom: 15px;
 }
 
+.search {
+  color: darkslateblue;
+}
+
 th {
   color: darkcyan;
   padding-left: 10px;
   font-size: 18px;
 }
 
-tbody {
-  color: darkgoldenrod;
-  padding-inline: 3px;
+.head {
+  line-height: 60px;
+}
+
+tr:nth-child(even) {
+  background-color: rgb(239, 249, 252);
+}
+
+.table tr:hover {
+  background-color: rgb(255, 238, 238);
 }
 
 .menu_links {
   cursor: pointer;
+}
+
+.form-control {
+  width: 50px;
+  color: pink;
 }
